Updated buttons and footer

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,14 @@
-h3, h5 {
+h2, h3, h5 {
     color: white;
 }
 
 /* Global */
+
+.section {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 50px;
+}
 
 .heading {
     display: flex;
