--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                 <img src="assets/blog-cover-1.jpg" alt="">
                 <div class="blog-info">
                     <p>Jun 12th 2023</p>
-                    <h4>Why you should be a solo traveller in 2023</h4>
+                    <h4>Why you should travel solo in 2023</h4>
                 </div>
                 <div class="blog-topic">
                     <p>Travel</p>
@@ -98,74 +98,74 @@
     </div>
     <div class="section sub-section">
         <div class="heading">
-            <h3>Popular</h3>
+            <h2>Popular</h2>
         </div>
         <div class="popular-blogs">
             <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
                 <img src="assets/blog-cover-7.jpg" alt="">
                 <div class="blog-info">
-                    <p>Oct 17th 2023</p>
+                    <p>Jan 7th 2023</p>
                     <h4>Sample Title</h4>
                 </div>
                 <div class="blog-topic">
-                    <p>Topic</p>
+                    <p>Travel</p>
                 </div>
             </div>
             <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
-                <img src="assets/blog-cover-7.jpg" alt="">
+                <img src="assets/blog-cover-2.jpg" alt="">
                 <div class="blog-info">
-                    <p>Oct 17th 2023</p>
+                    <p>Nov 3rd 2022</p>
                     <h4>Sample Title</h4>
                 </div>
                 <div class="blog-topic">
-                    <p>Topic</p>
+                    <p>Technology</p>
                 </div>
             </div>
             <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
-                <img src="assets/blog-cover-7.jpg" alt="">
+                <img src="assets/blog-cover-4.jpg" alt="">
                 <div class="blog-info">
-                    <p>Oct 17th 2023</p>
+                    <p>Mar 24th 2023</p>
                     <h4>Sample Title</h4>
                 </div>
                 <div class="blog-topic">
-                    <p>Topic</p>
+                    <p>Photography</p>
                 </div>
             </div>
             <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
-                <img src="assets/blog-cover-7.jpg" alt="">
+                <img src="assets/blog-cover-5.jpg" alt="">
                 <div class="blog-info">
-                    <p>Oct 17th 2023</p>
+                    <p>Mar 13th 2023</p>
                     <h4>Sample Title</h4>
                 </div>
                 <div class="blog-topic">
-                    <p>Topic</p>
+                    <p>Fitness</p>
                 </div>
             </div>
             <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
-                <img src="assets/blog-cover-7.jpg" alt="">
+                <img src="assets/blog-cover-9.jpg" alt="">
                 <div class="blog-info">
-                    <p>Oct 17th 2023</p>
+                    <p>Dec 9th 2022</p>
                     <h4>Sample Title</h4>
                 </div>
                 <div class="blog-topic">
-                    <p>Topic</p>
+                    <p>Photography</p>
                 </div>
             </div>
             <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
-                <img src="assets/blog-cover-7.jpg" alt="">
+                <img src="assets/blog-cover-8.jpg" alt="">
                 <div class="blog-info">
-                    <p>Oct 17th 2023</p>
+                    <p>Jan 5th 2023</p>
                     <h4>Sample Title</h4>
                 </div>
                 <div class="blog-topic">
-                    <p>Topic</p>
+                    <p>Nature</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="section sub-section">
         <div class="heading">
-            <h3>Explore</h3>
+            <h2>Explore</h2>
         </div>
         <div class="explore-topics">
             <h4>Travel</h4>
