--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,8 +17,7 @@
             <li><a href="">Fashion</a></li>
         </ul>
         <div class="buttons">
-            <a routerLink="" routerLinkActive="active"><button class="sign-btn">Sign In</button></a>
-            <a routerLink="" routerLinkActive="active"><button class="sign-btn sign-up">Sign Up</button></a>
+            <a routerLink="sign-in" routerLinkActive="active"><button class="sign-btn">Sign In</button></a>
         </div>
     </div>
     <div class="search">
