--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,25 @@
-<p>footer works!</p>
+<footer>
+    <div class="section">
+        <h3>Sitemap</h3>
+        <a routerLink="home"><p>Home</p></a>
+        <a routerLink="membership"><p>Membership</p></a>
+        <a routerLink="contact"><p>Contact</p></a>
+        <a routerLink="sign-in"><p>Sign In</p></a>
+    </div>
+    <div class="section">
+        <h3>Newsletter</h3>
+        <p>Enter your email below to receive our weekly newsletter</p>
+        <div class="newsletter-box">
+            <input type="text" class="newsletter" placeholder="Email">
+        </div>
+        <button class="pri-btn">JOIN</button>
+    </div>
+    <div class="section">
+        <h3>Popular Topics</h3>
+        <p class="plink">Travel</p>
+        <p class="plink">Lifestyle</p>
+        <p class="plink">Fitness</p>
+        <p class="plink">Fashion</p>
+        <p class="plink">Technology</p>
+    </div>
+</footer>
