--- a/src/styles.css
+++ b/src/styles.css
@@ -29,29 +29,22 @@ body {
     gap: 15px;
 }
 
-.section {
-    display: flex;
-    width: 100%;
-    gap: 15px;
-    margin-bottom: 50px;
-}
-
 .pri-btn {
-    border: 2px solid var(--accent);
-    border-radius: 16px;
+    width: 225px;
+    border: 3px solid var(--accent);
     text-transform: uppercase;
     padding: 8px 28px;
     font-family: 'Montserrat', sans-serif !important;
     font-weight: bold;
     font-size: 12px;
     background-color: var(--accent);
-    color: black;
+    color: white;
     transition: all 250ms;
 }
 
 .pri-btn:hover {
     cursor: pointer;
-    background-color: white;
+    background-color: var(--main);
 }
 
 img {
