Blog page + minor footer and navbar changes

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,32 @@
 <div class="main">
-    <p>blog</p>
+    <a routerLink="/home" routerLinkActive="active"><button class="pri-btn">Home</button></a>
+    <header>
+        <h1>Sample Title</h1>
+        <div class="profile">
+            <img src="assets/profile.jpg" alt="">
+            <p>John Doe</p>
+        </div>
+        <i>Jul 13th 2023</i>
+    </header>
+    <div class="content">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lacus leo, commodo a purus eu, porttitor lobortis metus. Suspendisse facilisis ac enim quis pharetra. In semper ullamcorper tincidunt. Aliquam sed pellentesque orci. Nunc vitae suscipit lacus. Maecenas ut augue nec urna malesuada mollis. Duis ultrices ut felis volutpat luctus. Quisque ut euismod tellus, sit amet pellentesque tellus. Donec vulputate gravida ex, maximus scelerisque elit bibendum a. Donec tincidunt, nisl sit amet consectetur dignissim, diam purus aliquet justo, et placerat lorem tortor sit amet sapien.
+        </p>
+        <p>
+            Proin efficitur egestas purus non posuere. Vestibulum pretium dui quam, id euismod tortor fringilla eget. Morbi non orci ut orci maximus lobortis in a arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer pretium finibus elit, ut imperdiet massa dignissim quis. Curabitur efficitur et ligula a interdum. Mauris euismod pellentesque massa non mattis. Maecenas a vestibulum ipsum, eget accumsan nunc. Fusce id enim quis felis suscipit viverra. Nam sit amet mi congue, venenatis ante sed, iaculis enim. Suspendisse posuere commodo quam id tincidunt. Integer purus augue, rhoncus in lacus et, placerat tincidunt nulla. Donec ut mi sed eros cursus tristique ut ornare felis.
+        </p>
+        <p>
+            Integer malesuada diam ut massa hendrerit congue. Ut interdum, nisl vel bibendum volutpat, lorem orci facilisis urna, in iaculis arcu tortor ut turpis. In ac porttitor diam, ut interdum ipsum. Pellentesque iaculis rutrum odio, eget fringilla felis posuere vel. Maecenas nibh metus, lobortis sed mauris nec, ultricies sagittis enim. Ut eget ante ligula. Mauris id dolor et libero imperdiet mattis ac non urna. Aliquam faucibus lobortis bibendum. Nullam maximus turpis non nibh malesuada eleifend a ac erat. Ut diam purus, facilisis eu ligula at, aliquet volutpat neque. Cras eu elit risus.
+        </p>
+        <p>
+            In ac lacus erat. Aliquam ultricies augue a fermentum mattis. Proin non massa eget augue dapibus consectetur. Phasellus eget leo mattis, dictum nibh eget, sagittis lectus. Maecenas placerat purus sed metus blandit dictum. Nullam commodo lacus aliquam feugiat venenatis. Pellentesque et bibendum est. Suspendisse sit amet vehicula urna, vitae fermentum nibh. Proin id ipsum velit. Nam ut ipsum dui. Phasellus vitae mattis neque. Nunc ante velit, mollis vitae lacus a, vestibulum mattis risus. Mauris feugiat mi sed facilisis molestie.
+        </p>
+        <p>
+            Suspendisse sollicitudin sapien et eleifend tristique. Morbi efficitur leo quis lacus tempus, sed volutpat ligula iaculis. Nulla facilisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras eleifend nibh nisl, at sodales erat feugiat sit amet. Vestibulum dapibus turpis in venenatis pretium. Vivamus non tristique purus. Nullam pharetra finibus felis a porttitor. Integer posuere lacus sit amet arcu rutrum porttitor. Integer aliquam ligula mauris, vel aliquet ligula consectetur vitae. Sed ac turpis quis enim vestibulum ultrices. Phasellus ac orci sit amet dolor placerat eleifend. Etiam id nulla consectetur, rutrum mauris eu, malesuada leo.
+        </p>
+    </div>
+    <div class="comment">
+        <p>To rate and comment, please sign in</p>
+        <a routerLink="/sign-in" routerLinkActive="active"><button class="pri-btn">Sign In</button></a>
+    </div>
 </div>
