--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,11 @@
 <footer>
     <div class="section">
-        <h3>Sitemap</h3>
-        <a routerLink="home"><p>Home</p></a>
-        <a routerLink="membership"><p>Membership</p></a>
-        <a routerLink="contact"><p>Contact</p></a>
-        <a routerLink="sign-in"><p>Sign In</p></a>
+        <h3>Popular Topics</h3>
+        <p class="plink">Travel</p>
+        <p class="plink">Lifestyle</p>
+        <p class="plink">Fitness</p>
+        <p class="plink">Fashion</p>
+        <p class="plink">Technology</p>
     </div>
     <div class="section">
         <h3>Newsletter</h3>
@@ -15,11 +16,10 @@
         <button class="pri-btn">JOIN</button>
     </div>
     <div class="section">
-        <h3>Popular Topics</h3>
-        <p class="plink">Travel</p>
-        <p class="plink">Lifestyle</p>
-        <p class="plink">Fitness</p>
-        <p class="plink">Fashion</p>
-        <p class="plink">Technology</p>
+        <h3>Sitemap</h3>
+        <a routerLink="home" routerLinkActive="active"><p>Home</p></a>
+        <a routerLink="membership" routerLinkActive="active"><p>Membership</p></a>
+        <a routerLink="contact" routerLinkActive="active"><p>Contact</p></a>
+        <a routerLink="sign-in" routerLinkActive="active"><p>Sign In</p></a>
     </div>
 </footer>
