--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,12 @@
 footer {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 75px;;
+    padding: 50px 0;
+    background-color: var(--main);
+}
+
+h3 {
+    color: white;
 }
 
 .section {
@@ -11,9 +16,11 @@ footer {
     margin-bottom: 50px;
 }
 
-.section a {
+.section a,
+.plink {
     text-decoration: none;
     color: var(--text);
+    transition: all 250ms;
 }
 
 .section a:hover,
