--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,10 @@
 header {
     display: flex;
     flex-direction: column;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    background-color: var(--main-dark);
 }
 
 nav {
