Sign In page + spacing adjustments

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,12 +1,16 @@
 footer {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 50px 0;
     background-color: var(--main);
 }
 
 h3 {
     color: white;
+}
+
+.newsletter-container {
+    margin: 0 200px;
 }
 
 .section {
