--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -119,7 +119,7 @@ li:hover a {
 
 .bx-search-alt {
     position: absolute;
-    top: 8px;
+    top: 28%;
     left: 8px;
     height: 18px;
     width: 18px;
