--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,15 @@
-<p>sign-in works!</p>
+<div class="main">
+    <div class="form-container">
+        <h1>Sign In</h1>
+        <div class="fields">
+            <label for="username">Username</label>
+            <input type="text" placeholder="Username">
+            <label for="password">Password</label>
+            <input type="password" placeholder="Password">
+            <div class="button">
+                <button class="pri-btn" routerLink="/home" routerLinkActive="active">Sign In</button>
+            </div>
+        </div>
+        <p>Don't have an account? <a>Sign Up</a></p>
+    </div>
+</div>
