--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
         <p class="plink">Fashion</p>
         <p class="plink">Technology</p>
     </div>
-    <div class="section">
+    <div class="section newsletter-container">
         <h3>Newsletter</h3>
         <p>Enter your email below to receive our weekly newsletter</p>
         <div class="newsletter-box">
