--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -1,1 +1,15 @@
-<p>membership works!</p>
+<div class="main">
+    <div class="heading">
+        <h1>Membership</h1>
+    </div>
+    <div class="container">
+        <div class="current">
+            <h2>Current Plan</h2>
+            <p>Basic <span class="sml">$4.99/mth</span></p>
+        </div>
+        <div class="upgrade">
+            <h2>Upgrade to <span class="pro">PRO</span> for only $9.99 per month!</h2>
+            <button class="pri-btn">Upgrade Now</button>
+        </div>
+    </div>
+</div>
