Upgraded Membership page

--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -4,12 +4,42 @@
     </div>
     <div class="container">
         <div class="current">
-            <h2>Current Plan</h2>
-            <p>Basic <span class="sml">$4.99/mth</span></p>
+            <table>
+                <tr>
+                    <th></th>
+                    <th>BASIC <span class="sml">$4.99/mth</span></th>
+                    <th>PRO <span class="sml">$9.99/mth</span></th>
+                </tr>
+                <tr>
+                    <td>Weekly Posts</td>
+                    <td>✔</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td>Weekly Rates</td>
+                    <td>✔</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td>Unlimited Posts</td>
+                    <td>x</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td>Unlimited Rates</td>
+                    <td>x</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="emph">CURRENT</td>
+                    <td><button class="pri-btn">Upgrade</button></td>
+                </tr>
+            </table>
         </div>
         <div class="upgrade">
             <h2>Upgrade to <span class="pro">PRO</span> for only $9.99 per month!</h2>
-            <button class="pri-btn">Upgrade Now</button>
+            <button class="pri-btn">Upgrade</button>
         </div>
     </div>
 </div>
