--- a/src/app/membership/membership.component.css
+++ b/src/app/membership/membership.component.css
@@ -4,7 +4,6 @@
 
 .sml {
     font-size: 12px;
-    margin-left: 25px;
 }
 
 .container {
@@ -23,9 +22,28 @@
     margin: 100px 0;
 }
 
-.pri-btn {
-    width: 350px;
-    height: 75px;
-    font-size: 20px;
-    margin-top: 50px;
+table, th, td {
+    border: 1px solid var(--main-light);
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 12px;
+    text-align: center;
+    width: 200px;
+}
+
+th:nth-child(2) {
+    background-color: rgb(253, 88, 88);
+    color: white;
+}
+
+th:nth-child(3) {
+    background-color: var(--accent);
+    color: white;
+}
+
+.emph {
+    font-weight: bold;
+    color: white;
 }
