--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -6,40 +6,42 @@
         <div class="current">
             <table>
                 <tr>
-                    <th></th>
-                    <th>BASIC <span class="sml">$4.99/mth</span></th>
-                    <th>PRO <span class="sml">$9.99/mth</span></th>
+                    <th>Basic <span class="sml">FREE</span></th>
+                    <th>Pro <span class="sml">$9.99/mth</span></th>
+                    <th>Premium <span class="sml">$19.99/mth</span></th>
                 </tr>
                 <tr>
+                    <td>Monthly Posts</td>
                     <td>Weekly Posts</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                </tr>
-                <tr>
-                    <td>Weekly Rates</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                </tr>
-                <tr>
                     <td>Unlimited Posts</td>
-                    <td>x</td>
-                    <td>✔</td>
                 </tr>
                 <tr>
+                    <td>30 Rates / Month</td>
+                    <td>60 Rates / Month</td>
                     <td>Unlimited Rates</td>
-                    <td>x</td>
-                    <td>✔</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>No Monthly Promotions</td>
+                    <td>3 Promotions / Month</td>
+                    <td>10 Promotions / Month</td>
+                </tr>
+                <tr>
+                    <td>Ads</td>
+                    <td>Ad-Free</td>
+                    <td>Ad-Free</td>
+                </tr>
+                <tr>
                     <td class="emph">CURRENT</td>
                     <td><button class="pri-btn">Upgrade</button></td>
+                    <td><button class="pri-btn premium">Upgrade</button></td>
                 </tr>
             </table>
         </div>
         <div class="upgrade">
-            <h2>Upgrade to <span class="pro">PRO</span> for only $9.99 per month!</h2>
+            <h2>Upgrade to <span class="pro">Pro</span> for only $9.99 per month!</h2>
             <button class="pri-btn">Upgrade</button>
+            <h2>Upgrade to <span class="pre">Premium</span> for only $19.99 per month!</h2>
+            <button class="pri-btn premium">Upgrade</button>
         </div>
     </div>
 </div>
