--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -1,41 +1,35 @@
 <div class="main">
     <div class="heading">
-        <h1>Membership</h1>
+        <h1>Membership Plans</h1>
     </div>
     <div class="container">
-        <div class="current">
-            <table>
-                <tr>
-                    <th>Basic <span class="sml">FREE</span></th>
-                    <th>Pro <span class="sml">$9.99/mth</span></th>
-                    <th>Premium <span class="sml">$19.99/mth</span></th>
-                </tr>
-                <tr>
-                    <td>Monthly Posts</td>
-                    <td>Weekly Posts</td>
-                    <td>Unlimited Posts</td>
-                </tr>
-                <tr>
-                    <td>30 Rates / Month</td>
-                    <td>60 Rates / Month</td>
-                    <td>Unlimited Rates</td>
-                </tr>
-                <tr>
-                    <td>No Monthly Promotions</td>
-                    <td>3 Promotions / Month</td>
-                    <td>10 Promotions / Month</td>
-                </tr>
-                <tr>
-                    <td>Ads</td>
-                    <td>Ad-Free</td>
-                    <td>Ad-Free</td>
-                </tr>
-                <tr>
-                    <td class="emph">CURRENT</td>
-                    <td><button class="pri-btn">Upgrade</button></td>
-                    <td><button class="pri-btn premium">Upgrade</button></td>
-                </tr>
-            </table>
+        <div class="plans">
+            <div class="table">
+                <div class="tc">
+                    <div class="th basic-head">Basic</div>
+                    <div class="td">Monthly Posts</div>
+                    <div class="td">30 Rates / Month</div>
+                    <div class="td">No Monthly Promotions</div>
+                    <div class="td">Ads</div>
+                    <div class="td emph">CURRENT</div>
+                </div>
+                <div class="tc">
+                    <div class="th pro-head">Pro</div>
+                    <div class="td">Weekly Posts</div>
+                    <div class="td">60 Rates / Month</div>
+                    <div class="td">3 Promotions / Month</div>
+                    <div class="td">Ad-Free</div>
+                    <div class="td"><button class="pri-btn">Upgrade</button></div>
+                </div>
+                <div class="tc">
+                    <div class="th premium-head">Premium</div>
+                    <div class="td">Unlimited Posts</div>
+                    <div class="td">Unlimited Rates</div>
+                    <div class="td">10 Promotions / Month</div>
+                    <div class="td">Ad-Free</div>
+                    <div class="td"><button class="pri-btn premium">Upgrade</button></div>
+                </div>
+            </div>
         </div>
         <div class="upgrade">
             <h2>Upgrade to <span class="pro">Pro</span> for only $9.99 per month!</h2>
