Renamed 'Contact' to 'Support' + Support Form

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,7 +19,7 @@
         <h3>Sitemap</h3>
         <a routerLink="home" routerLinkActive="active"><p>Home</p></a>
         <a routerLink="membership" routerLinkActive="active"><p>Membership</p></a>
-        <a routerLink="contact" routerLinkActive="active"><p>Contact</p></a>
+        <a routerLink="support" routerLinkActive="active"><p>Support</p></a>
         <a routerLink="sign-in" routerLinkActive="active"><p>Sign In</p></a>
     </div>
 </footer>
