--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <ul>
             <li routerLink="home" routerLinkActive="active"><a>Home</a></li>
             <li routerLink="membership" routerLinkActive="active"><a>Membership</a></li>
-            <li routerLink="contact" routerLinkActive="active"><a>Contact</a></li>
+            <li routerLink="support" routerLinkActive="active"><a>Support</a></li>
         </ul>
     </nav>
     <div class="subnav">
